Fixed mobile view. Added text-center class. Changed padding on footer icons (were too close)

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -209,7 +209,6 @@ h1.herotext {
     width: auto;
 }
 .technologies > div:first-of-type {
-    width: 760px;
     margin: 0 auto;
 }
 .technologies h2 {
@@ -579,12 +578,12 @@ footer .inner > div:last-child {
 }
 .footer-soc-media,
 .footer-soc-media:visited {
-    padding-left: 15px;
+    padding-left: 20px;
     color: white;
 }
 .header-soc-media,
 .header-soc-media:visited {
-    padding-right: 15px;
+    padding-right: 20px;
     color: white;
 }
 button:disabled,
@@ -819,4 +818,8 @@ button:disabled:hover {
         max-width:100%;
         height:auto;
     }    
+
+    .text-center {
+        text-align: center !important;
+      }
 }
